Fix up autosuggest - Change placeholder color to be more legible. - Add a "type" to generated suggestions to differentiate between drinks and ingredients. - Don't show empty suggestion sections. - Stop relying on section index to determine type of suggestion.

--- a/src/style/auto-suggest.css
+++ b/src/style/auto-suggest.css
@@ -17,6 +17,10 @@
   color: var(--control-text);
 }
 
+.react-autosuggest__input::placeholder {
+  color: var(--gray-700);
+}
+
 .react-autosuggest__container--open .react-autosuggest__input {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
